--- a/public/project/views/user/templates/users/register.view.client.html
+++ b/public/project/views/user/templates/users/register.view.client.html
@@ -4,8 +4,8 @@
             <a href="../home.html" id="branding">
                 <img src="../../../vendor/images/logo.png" alt="" class="logo">
                 <div class="logo-copy">
-                    <h1 class="site-title">Company Name</h1>
-                    <small class="site-description">Tagline goes here</small>
+                    <h1 class="site-title">CINEREVIEW</h1>
+                    <small class="site-description">Explore Hollywood!</small>
                 </div>
             </a> <!-- #branding -->
 
