--- a/public/project/style.css
+++ b/public/project/style.css
@@ -239,6 +239,11 @@ h1, h2, h3, h4, h5, h6 {
 .form-control{
   width: 100%;
 }
+
+#profilebtn{
+margin-bottom: 10px;
+}
+
 hr {
   border: none;
   border-bottom: 1px solid #777; }
