--- a/public/project/views/user/templates/cinema/SearchMovies.view.client.html
+++ b/public/project/views/user/templates/cinema/SearchMovies.view.client.html
@@ -27,29 +27,26 @@
 <!--</form>-->
 <!--</div> &lt;!&ndash; .main-navigation &ndash;&gt;-->
 
-<nav id = "homenav" class="navbar navbar-inverse navbar-fixed-top">
-<div class="container-fluid">
-<div class="navbar-header">
-<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-</button>
-</div>
-<div>
-<div class="collapse navbar-collapse navbar-right" id="myNavbar">
-<ul class="nav navbar-nav">
-	<li><a href="#!/login">Login</a></li>
-	<li><a href="#!/register">Register</a></li>
-	<li><a data-toggle="modal" data-target="#regModal">About</a></li>
-	<li><a data-toggle="modal" data-target="#regModal">Profile</a></li>
-</ul>
-</div>
 
-</div>
-</div>
-</nav>
-
+	<div class="main-navigation">
+		<button type="button" id ="navbutton" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+	</div>
+	<div>
+		<div class="collapse navbar-collapse navbar-right" id="myNavbar">
+			<ul class="nav navbar-nav">
+				<li><a ng-show="model.user.role[0] == 'ADMIN'" href="#!/admin">ADMIN</a></li>
+				<li><a ng-show="!model.user._id" href="#!/login">Login</a></li>
+				<li><a ng-show="!model.user._id" href="#!/register">Register</a></li>
+				<li><a ng-show="model.user._id" href="#!/profile">Profile</a></li>
+				<li><a ng-show="model.user._id" ng-click="model.logout()">logout</a></li>
+				<li><a href="#!/">BACK</a></li>
+			</ul>
+		</div>
+	</div>
 
 
 <div class="mobile-navigation"></div>
@@ -124,64 +121,7 @@
 <footer class="site-footer">
 <div class="container">
 <div class="row">
-<div class="col-md-2">
-<div class="widget">
-<h3 class="widget-title">About Us</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia tempore vitae mollitia nesciunt saepe cupiditate</p>
-</div>
-</div>
-<div class="col-md-2">
-<div class="widget">
-<h3 class="widget-title">Recent Review</h3>
-<ul class="no-bullet">
-<li>Lorem ipsum dolor</li>
-<li>Sit amet consecture</li>
-<li>Dolorem respequem</li>
-<li>Invenore veritae</li>
-</ul>
-</div>
-</div>
-<div class="col-md-2">
-<div class="widget">
-<h3 class="widget-title">Help Center</h3>
-<ul class="no-bullet">
-<li>Lorem ipsum dolor</li>
-<li>Sit amet consecture</li>
-<li>Dolorem respequem</li>
-<li>Invenore veritae</li>
-</ul>
-</div>
-</div>
-<div class="col-md-2">
-<div class="widget">
-<h3 class="widget-title">Join Us</h3>
-<ul class="no-bullet">
-<li>Lorem ipsum dolor</li>
-<li>Sit amet consecture</li>
-<li>Dolorem respequem</li>
-<li>Invenore veritae</li>
-</ul>
-</div>
-</div>
-<div class="col-md-2">
-<div class="widget">
-<h3 class="widget-title">Social Media</h3>
-<ul class="no-bullet">
-<li>Facebook</li>
-<li>Twitter</li>
-<li>Google+</li>
-<li>Pinterest</li>
-</ul>
-</div>
-</div>
-<div class="col-md-2">
-<div class="widget">
-<h3 class="widget-title">Newsletter</h3>
-<form action="#" class="subscribe-form">
-<input type="text" placeholder="Email Address">
-</form>
-</div>
-</div>
+
 </div> <!-- .row -->
 
 <div class="colophon">Copyright 2014 Company name, Designed by Themezy. All rights reserved</div>
