--- a/public/project/views/user/templates/users/login.view.client.html
+++ b/public/project/views/user/templates/users/login.view.client.html
@@ -1,66 +1,66 @@
 
-		<div id="site-content">
-			<header class="site-header">
-				<div class="container">
-					<a href="../home.html" id="branding">
-						<img src="../../../../images/logo.png" alt="" class="logo">
-						<div class="logo-copy">
-							<h1 class="site-title">Company Name</h1>
-							<small class="site-description">Tagline goes here</small>
-						</div>
-					</a> <!-- #branding -->
+<div id="site-content">
+<header class="site-header">
+<div class="container">
+<a href="../home.html" id="branding">
+	<img src="../../../../images/logo.png" alt="" class="logo">
+	<div class="logo-copy">
+		<h1 class="site-title">CINEREVIEW</h1>
+		<small class="site-description">Explore Hollywood!</small>
+	</div>
+</a> <!-- #branding -->
 
-					<div class="mobile-navigation"></div>
-				</div>
-			</header>
-			<main class="main-content">
-				<div class="container">
-					<div class="page">
-						<div class="breadcrumbs">
-							<a href="../home.html">Home</a>
-							<span>Login</span>
-						</div>
+<div class="mobile-navigation"></div>
+</div>
+</header>
+<main class="main-content">
+<div class="container">
+<div class="page">
+	<div class="breadcrumbs">
+		<a href="../home.html">Home</a>
+		<span>Login</span>
+	</div>
 
-						<div class="content">
-							<div ng-show="model.message" class="alert alert-info">{{model.message}}</div>
-							<div ng-show="model.errorMessage" class="alert alert-danger">
-								{{model.errorMessage}}
-							</div>
-							<h1>Login</h1>
-							<label for="username">
-								Username</label>
-							<input id = "username" ng-model="model.username" type="text" class="form-control" placeholder="vaibhav"/>
-							<div class="form-group">
-							<label for="password">
-								Password</label>
-							<input id="password"  ng-model="model.password" type="password" class="form-control" placeholder="pass"/>
-							</div>
-							<div class="form-group">
-							<a class="btn btn-primary btn-block" ng-click="model.login(model.username, model.password)">
-								Login</a>
-								<a class="btn btn-block btn-success" href="/auth/facebook">
-									<i class="fa fa-facebook"></i> Facebook
-								</a>
-								<a class="btn btn-block btn-danger" href="/auth/project/google">
-									<i class="fa fa-google-plus"></i> Google
-								</a>
-							<a class="btn btn-success btn-block"
-							   href="#!/register">
-								Register</a>
-						</div>
-						</div>
-					</div>
-				</div> <!-- .container -->
-			</main>
-			<footer class="site-footer">
-				<div class="container">
-					<div class="row">
-
-					</div> <!-- .row -->
-
-					<div class="colophon">Copyright 2014 Company name, Designed by Themezy. All rights reserved</div>
-				</div> <!-- .container -->
-
-			</footer>
+	<div class="content">
+		<div ng-show="model.message" class="alert alert-info">{{model.message}}</div>
+		<div ng-show="model.errorMessage" class="alert alert-danger">
+			{{model.errorMessage}}
 		</div>
-		<!-- Default snippet for navigation -->
+		<h1>Login</h1>
+		<label for="username">
+			Username</label>
+		<input id = "username" ng-model="model.username" type="text" class="form-control" placeholder="vaibhav"/>
+		<div class="form-group">
+		<label for="password">
+			Password</label>
+		<input id="password"  ng-model="model.password" type="password" class="form-control" placeholder="pass"/>
+		</div>
+		<div class="form-group">
+		<a class="btn btn-primary btn-block" ng-click="model.login(model.username, model.password)">
+			Login</a>
+			<a class="btn btn-block btn-success" href="/auth/facebook">
+				<i class="fa fa-facebook"></i> Facebook
+			</a>
+			<a class="btn btn-block btn-danger" href="/auth/project/google">
+				<i class="fa fa-google-plus"></i> Google
+			</a>
+		<a class="btn btn-success btn-block"
+		   href="#!/register">
+			Register</a>
+	</div>
+	</div>
+</div>
+</div> <!-- .container -->
+</main>
+<footer class="site-footer">
+<div class="container">
+<div class="row">
+
+</div> <!-- .row -->
+
+<div class="colophon">Copyright 2014 Company name, Designed by Themezy. All rights reserved</div>
+</div> <!-- .container -->
+
+</footer>
+</div>
+<!-- Default snippet for navigation -->
