--- a/public/project/views/user/templates/users/profile.view.client.html
+++ b/public/project/views/user/templates/users/profile.view.client.html
@@ -82,10 +82,10 @@
                     <h5>Movie :
                         <a href="#!/user/movies/{{review.movieID}}" class="btn btn-link"> {{review.moviename}}</a></h5>
                         <h4>
-                        <a ng-click="model.reviewDownVote(review._id)">
+                        <a ng-show="model.user.role[0] == 'CRITIC'" ng-click="model.reviewDownVote(review._id)">
                             <i class="fa fa-thumbs-down pull-right" aria-hidden="true"> {{review.dislike.length}}</i>
                         </a>
-                        <a ng-click="model.reviewUpVote(review._id)">
+                        <a ng-show="model.user.role[0] == 'CRITIC'" ng-click="model.reviewUpVote(review._id)">
                             <i class="fa fa-thumbs-up pull-right" aria-hidden="true"> {{review.thumbsUp.length}}</i>
                         </a>
                     </h4>
